--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <iframe title="cardio_analysis" width="1140" height="541.25"
-        src="https://app.powerbi.com/reportEmbed?reportId=e01d0f10-78ca-4285-9e09-6ea3278e20df&autoAuth=true&ctid=35e8087e-75a7-4479-b528-df0fbbb7fc26"
+        src="https://app.powerbi.com/reportEmbed?reportId=e01d0f10-78ca-4285-9e09-6ea3278e20df"
         frameborder="0" allowFullScreen="true"></iframe>
 </body>
 </html>
