--- a/templates/home.html
+++ b/templates/home.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    <iframe title="cardio_analysis" width="1140" height="541.25"
-        src="https://app.powerbi.com/reportEmbed?reportId=e01d0f10-78ca-4285-9e09-6ea3278e20df&autoAuth=true&ctid=35e8087e-75a7-4479-b528-df0fbbb7fc26"
-        frameborder="0" allowFullScreen="true"></iframe>
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/heart">Start predictiton</a>
+                    </li>
+        </nav>
+
 </body>
 </html>
