--- a/templates/home.html
+++ b/templates/home.html
@@ -8,13 +8,90 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
+    <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/heart">Start predictiton</a>
+                        <a class="nav-link" href="/heart">Start prediction</a>
+                    </li>
+                    <li class="navbar-nav ml-auto">
+                        <a class="nav-link" href="/about">About the Machine</a>
                     </li>
         </nav>
-
+    </header>
+    <br><br>
+        <h1 class="text-center display-1">HEART DISEASE PREDICTION</h1>
+        <br>
+        <P class="display-5"><B>Introduction</B></P>
+       <P>Heart disease describes a range of conditions that affect your heart. Diseases under the heart disease umbrella include
+        blood vessel diseases, such as coronary artery disease, heart rhythm problems (arrhythmias) and heart defects you’re
+        born with (congenital heart defects), among others.
+        
+        The term “heart disease” is often used interchangeably with the term “cardiovascular disease”. Cardiovascular disease
+        generally refers to conditions that involve narrowed or blocked blood vessels that can lead to a heart attack, chest
+        pain (angina) or stroke. Other heart conditions, such as those that affect your heart’s muscle, valves or rhythm, also
+        are considered forms of heart disease.
+        
+        Heart disease is one of the biggest causes of morbidity and mortality among the population of the world. Prediction of
+        cardiovascular disease is regarded as one of the most important subjects in the section of clinical data analysis. The
+        amount of data in the healthcare industry is huge. Data mining turns the large collection of raw healthcare data into
+        information that can help to make informed decisions and predictions.</P>
+        <Br>
+       <P> According to a news article, heart disease proves to be the leading cause of death for both women and men. The article
+        states the following :
+        
+        About 610,000 people die of heart disease in the United States every year–that’s 1 in every 4 deaths.1
+        
+        Heart disease is the leading cause of death for both men and women. More than half of the deaths due to heart disease in
+        2009 were in men.1
+        
+        Coronary Heart Disease(CHD) is the most common type of heart disease, killing over 370,000 people annually.
+        
+        Every year about 735,000 Americans have a heart attack. Of these, 525,000 are a first heart attack and 210,000 happen in
+        people who have already had a heart attack.
+        
+        This makes heart disease a major concern to be dealt with. But it is difficult to identify heart disease because of
+        several contributory risk factors such as diabetes, high blood pressure, high cholesterol, abnormal pulse rate, and many
+        other factors. Due to such constraints, scientists have turned towards modern approaches like Data Mining and Machine
+        Learning for predicting the disease.</P>
+        <br>
+        <p class="display-5">Some ways to prevent heart diseases</p>
+        <br>
+        <P>Some strategies to prevent heart diseases are as follows:</P>
+        <ul>
+            <li>
+                <p class="display-6">Don't smoke or use tobacco</p><br>
+                <p>One of the best things you can do for your heart is to stop smoking or using smokeless tobacco. Even if you're not a
+                smoker, be sure to stay away from secondhand smoke.
+                
+                Chemicals in tobacco can damage the heart and blood vessels. Cigarette smoke lowers the oxygen in the blood, which
+                raises blood pressure and heart rate. That's because the heart has to work harder to supply enough oxygen to the body
+                and brain.</p>
+            </li>
+            <li>
+                <p class="display-6">Get moving: Aim for at least 30 to 60 minutes of activity daily</p><br>
+                <P>Regular, daily physical activity can lower the risk of heart disease. Physical activity helps control your weight. It
+                also lowers the chances of getting other conditions that may put a strain on the heart. These include high blood
+                pressure, high cholesterol and type 2 diabetes.
+                
+                If you haven't been active for a while, you may need to slowly work your way up to these goals.</P>
+            </li>
+            <li>
+                <p class="display-6">
+                    Eat a heart-healthy diet</p><br>
+                    <p>A healthy diet can help protect the heart, improve blood pressure and cholesterol, and lower the risk of type 2
+                    diabetes. A heart-healthy eating plan includes:<br>
+                    
+                    Vegetables and fruits.<br>
+                    Beans or other legumes.<br>
+                    Lean meats and fish.<br>
+                    Low-fat or fat-free dairy foods.<br>
+                    Whole grains.<br>
+                    Healthy fats such as olive oil and avocado.<br>
+                </p>
+            </li>
+        </ul>
+        
 </body>
 </html>
