--- a/templates/landing.html
+++ b/templates/landing.html
@@ -24,7 +24,7 @@
         <h1 class="text-center shadow border-2 rounded-2 display-1">WELIVE</h1>
         <br>
         <h3>Welcome to WeLive.</h3>
-        <button class="btn btn-dark" type="button" onclick="window.location.href='https://welive.com/home'" value="Get Started">Get Started</button>
+        <button class="btn btn-dark" type="button" onclick="window.location.href='http://20.40.202.11/home'" value="Get Started">Get Started</button>
     </div>
 </body>
 </html>
