--- a/templates/landing.html
+++ b/templates/landing.html
@@ -24,8 +24,7 @@
         <h1 class="text-center shadow border-2 rounded-2 display-1">WELIVE</h1>
         <br>
         <h3>Welcome to WeLive.</h3>
-        <a href="https://cardio-disease-detection.azurewebsites.net/home">
-        <button class="btn btn-dark" type="button">Get Started</button></a>
+        <button class="btn btn-dark" type="button" onclick="{{url_for('home')}}">Get Started</button>
     </div>
 </body>
 </html>
