--- a/templates/heart_result.html
+++ b/templates/heart_result.html
@@ -83,7 +83,7 @@
             <div class="container themed-container">
                 <h1 style="text-align: center;">{{ prediction_text }}</h1>
             </div>
-            <p style="text-align: center;">Click <a href="/disindex">here</a> to learn more about Heart Disease</p>
+            <p style="text-align: center;">Click <a href="{{url_for('home')}}">here</a> to learn more about Heart Disease</p>
             <p style="text-align: center;">&copy;riskassess.com</p>
         </div>
         <br />
