moving name to bottom right

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -19,7 +19,6 @@
             integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body class="bg-warning text-dark">
-    <p class="text-end"><h6><b>By Sreeahk</b></h6></p>
     <!-- <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fi.pinimg.com%2F736x%2F3e%2Fd7%2F46%2F3ed746223824126dfe0b3a4a1d6b6599.jpg&tbnid=SOmeZFftRY_F7M&vet=12ahUKEwi92qrx66mCAxXpz6ACHbY-AA0QMygAegQIARAq..i&imgrefurl=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F693061830143145568%2F&docid=a8Vj2XIYgTr6PM&w=626&h=352&q=cardiologist%20picture%20for%20homepage%20black%20and%20yellow&ved=2ahUKEwi92qrx66mCAxXpz6ACHbY-AA0QMygAegQIARAq"> -->
     <div class="container square-box d-flex justify-content-center align-items-center">
         <h1 class="text-center shadow border-2 rounded-2 display-1">WELIVE</h1>
@@ -27,5 +26,8 @@
         <h3>Welcome to WeLive.</h3>
         <button class="btn btn-dark" type="button" onclick="window.location.href='{{url_for('home')}}';"> Get Started </button>
     </div>
+    <p class="text-end align-text-bottom">
+        By Sreeahk
+        </p>
 </body>
 </html>
