--- a/templates/landing.html
+++ b/templates/landing.html
@@ -26,8 +26,8 @@
         <h3>Welcome to WeLive.</h3>
         <button class="btn btn-dark" type="button" onclick="window.location.href='{{url_for('home')}}';"> Get Started </button>
     </div>
-    <p class="text-end align-text-bottom">
-        By Sreeahk
+    <p class="text-end align-text-bottom"><b>
+        By Sreeahk</b>
         </p>
 </body>
 </html>
