--- a/templates/heart.html
+++ b/templates/heart.html
@@ -16,7 +16,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-    <title>RiskAssess | Heart Disease Prediction</title>
+    <title>Heart Disease Prediction</title>
 </head>
 <style>
     button {
