--- a/templates/heart.html
+++ b/templates/heart.html
@@ -128,47 +128,7 @@
 </style>
 
 <body>
-<!-- 
-    <header>
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <a class="navbar-brand" href="#"><b>RISK ASSESS</b></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
-                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/dashboard">Get Started</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/disindex">Disease Index</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/cancer">Breast Cancer</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/diabetes">Diabetes</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/heart">Heart Disease</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/kidney">Kidney Disease</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/liver">Liver Disease</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">|</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/logout">Logout</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header><br /><br /> -->
+
     <h1 style="text-align:center;">Heart Disease Prediction</h1>
     <h5 style="text-align:center;">Please enter the patient details</h5>
 
@@ -204,23 +164,23 @@
                     <input class="form-control" type="number" name="sex_0" placeholder="0=female,1=male" required="required" />
                 </div>
                 <div class="form-group">
-                    <label for="CP_0">CP_0</label>
+                    <label for="CP_0">CP</label>
                     <input class="form-control" type="number" name="CP_0" placeholder="accepts 0,1,2 or 3" required="required" />
                 </div>
                 <div class="form-group">
                 <div class="form-group">
-                    <label for="fbs_0">FBS_0</label>
+                    <label for="fbs_0">FBS</label>
                     <input class="form-control" type="number" name="FBS_0" placeholder="accepts 0 or 1" required="required" />
                 </div>
                 <div class="form-group">
-                    <label for="restecg_0">RESTECG_0</label>
+                    <label for="restecg_0">RESTECG</label>
                     <input class="form-control" type="number" name="restecg_0" placeholder="accepts 0,1 or 2"
                         required="required" />
                 </div>
 
                 </div>
                 <div class="form-group">
-                    <label for="exang_0">EXANG_0</label>
+                    <label for="exang_0">EXANG</label>
                     <input class="form-control" type="number" name="EXANG_0" placeholder="accpets 0 or 1"
                         required="required" />
                 </div>
