--- a/templates/heart.html
+++ b/templates/heart.html
@@ -167,7 +167,7 @@
                     <label for="CP_0">CP</label>
                     <input class="form-control" type="number" name="CP_0" placeholder="accepts 0,1,2 or 3" required="required" />
                 </div>
-                <div class="form-group">
+                <!-- <div class="form-group"> -->
                 <div class="form-group">
                     <label for="fbs_0">FBS</label>
                     <input class="form-control" type="number" name="FBS_0" placeholder="accepts 0 or 1" required="required" />
@@ -177,8 +177,8 @@
                     <input class="form-control" type="number" name="restecg_0" placeholder="accepts 0,1 or 2"
                         required="required" />
                 </div>
-
-                </div>
+<!-- 
+                </div> -->
                 <div class="form-group">
                     <label for="exang_0">EXANG</label>
                     <input class="form-control" type="number" name="EXANG_0" placeholder="accpets 0 or 1"
